some changes (jpa buddy)